Always mix audio from previous and next segments
Fix: Workstation audio skips ahead at top of segment
https://www.pivotaltracker.com/story/show/186586991